--- a/rails/master_rails_by_actions/app/views/admin/layouts/_menu.html.erb
+++ b/rails/master_rails_by_actions/app/views/admin/layouts/_menu.html.erb
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="<%=admin_root_path%>">Home <span class="sr-only">(current)</span> </a></li>
-        <li><a href="#">分类</a></li>
+        <li><a href="<%=admin_categories_path%>">分类</a></li>
       </ul>
 
       <form class="navbar-form navbar-left">
